frontend/src/components/ChannelsPage/MessageList/MessageList.css
.messages-panel {
    width: calc(100% - 240px);
    height: calc(100% - 20px);
    padding-top: 0px;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    position: relative;
}

.message-list-holder {
    width: calc(100% - 4px);
    height: 100%;
    overflow-y: scroll;
    margin-right: 4px;

    /* hiding scroll bar */
    /* -ms-overflow-style: none;
    scrollbar-width: none; */
}

/* .message-list-holder::-webkit-scrollbar {
    display: none;
} */

.message-list-holder::-webkit-scrollbar {
    width: 10px;
    position: relative;
}

.message-list-holder::-webkit-scrollbar-track{
    background: rgb(43, 45, 49);
    border-radius: 10px;
    margin-top: 4px;
    margin-bottom: 4px;
}

.message-list-holder::-webkit-scrollbar-thumb{
    background: rgb(31, 31, 34);
    border-radius: 10px;
}

.message-input-form{
    width: calc(100% - 32px);
    margin-left: 16px;
}

.message-input-form >input {
    width: calc(100% - 40px);
    border-radius: 5px;
    background-color: rgba(128, 128, 128, 0.10);
    color: rgba(255, 255, 255, 0.8);
    padding: 10px 20px;
    border: none;
    /* margin-top: 20px; */
    font-size: 14px;
}

.message-end {
    height: 20px;
}

